create new page

--- a/betboomproject.html
+++ b/betboomproject.html
@@ -220,11 +220,11 @@
                     </div>
                     <!-- Buttons Prev and Next-->
                     <div class="btn__row--next--prev">
-                        <a href="projects.html" class="project__button" target="_blank">
+                        <a href="projects.html" class="project__button" >
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" target="_blank">
+                        <a href="form.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
