--- a/gazpromproject.html
+++ b/gazpromproject.html
@@ -95,13 +95,14 @@
                             <div class="tasks__col">
                                 <div class="grey--number">01</div>
                                 <div class="tasks__text">
-                                    <p>Была разработана айдентика для турнира</p>
+                                    <p>Изучение функций обсервинга в игре
+                                        “Мир танков”</p>
                                 </div>
                             </div>
                             <div class="tasks__col">
                                 <div class="grey--number">02</div>
                                 <div class="tasks__text">
-                                    <p>Создан сайт для регистрации участников</p>
+                                    <p>Подготовка графики для трансляции</p>
                                 </div>
                             </div>
                         </div>
@@ -110,60 +111,19 @@
                             <div class="tasks__col">
                                 <div class="grey--number">03</div>
                                 <div class="tasks__text">
-                                    <p>Создание дизайна для сообщества
-                                        во ВКонтакте</p>
+                                    <p>Проведение трансляции, 
+                                        с приглашенными гостями</p>
                                 </div>
                             </div>
                             <div class="tasks__col">
                                 <div class="grey--number">04</div>
                                 <div class="tasks__text">
-                                    <p>Проведение трансляции по DOTA2</p>
+                                    <p>Создание отчетного видео о 
+                                        результатах турнира</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- Task Row-->
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">05</div>
-                                <div class="tasks__text">
-                                    <p>Создание индивидуальной графики 
-                                        для трансляции</p>
-                                </div>
-                            </div>
-                            <div class="tasks__col">
-                                <div class="grey--number">06</div>
-                                <div class="tasks__text">
-                                    <p>Создание внутриигровой графики
-                                        (худ)</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Task Row-->
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">07</div>
-                                <div class="tasks__text">
-                                    <p>Проведение трансляции по CS:GO</p>
-                                </div>
-                            </div>
-                            <div class="tasks__col">
-                                <div class="grey--number">08</div>
-                                <div class="tasks__text">
-                                    <p>Проведение трансляции по FIFA22</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Task Row-->
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">09</div>
-                                <div class="tasks__text">
-                                    <p>Создание отчетных роликов турнира</p>
-                                </div>
-                            </div>
-                            
-                        </div>
-                        <!-- Task Row-->
+                        <!-- Task Row-->                                                                      
                     </div>
                     <!-- END task wrapper-->
                     
@@ -177,11 +137,11 @@
                     </div>                                     
                     <!-- Buttons Prev and Next-->
                     <div class="btn__row--next--prev">
-                        <a href="projects.html" class="project__button" target="_blank">
+                        <a href="projects.html" class="project__button" >
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" target="_blank">
+                        <a href="form.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
