--- a/projects.html
+++ b/projects.html
@@ -203,7 +203,7 @@
                                     <p>Продакшн</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                    <a href="video-showproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                 </div>
                             </div>
                         </div>
