--- a/extenciproject.html
+++ b/extenciproject.html
@@ -110,7 +110,7 @@
                         </div>
                         <!-- Task Row-->
                     </div>
-                    <!-- END task wrapper-->
+                    <!-- END task wrapper!-->
                     <div class="take-off__main-img">
                         <div class="tasks--done--title">
                             <h2>Дизайн сайта</h2>
