--- a/extenciproject.html
+++ b/extenciproject.html
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Task Row-->
+                        <!-- Task Row!-->
                     </div>
                     <!-- END task wrapper!-->
                     <div class="take-off__main-img">
