--- a/cyberstudentproj.html
+++ b/cyberstudentproj.html
@@ -229,7 +229,7 @@
                     </div>
                     <!-- END task wrapper-->
                     <div class="tasks--done--title result--title">
-                        <p>Результат раюботы</p>
+                        <p>Результат работы</p>
                     </div>
                     <div class="basic--text result--text">
                         <p>Команда Air Time в полной мере реализовала все задачи, от создания дизайна до стриминга. 
