--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 <p>Менеджмент</p>
                             </div>
                             <div class="text__btn--more">
-                                <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                <a href="betboomproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                 
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                 <p>Киберспорт</p>
                             </div>
                             <div class="text__btn--more">
-                                <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                <a href="gazpromproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                 
                             </div>
                         </div>
@@ -252,7 +252,7 @@
                                 <p>Киберспорт</p>
                             </div>
                             <div class="text__btn--more">
-                                <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a> 
+                                <a href="cyberstudentproj.html"><img src="./img/arrow.png" alt="bet-boom league"></a> 
                             </div>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                                 <p>Дизайн</p>
                             </div>
                             <div class="text__btn--more">
-                                <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                <a href="takeoffproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                             </div>
                         </div>
                     </div>
