--- a/projects.html
+++ b/projects.html
@@ -226,7 +226,7 @@
                                     <p>Киберспорт</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a> 
+                                    <a href="shosproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a> 
                                 </div>
                             </div>
                         </div>
