adaptive for iphone 5

--- a/index.html
+++ b/index.html
@@ -382,18 +382,18 @@
     </main>
     <footer class="container-fluid">
         <div class="footer__content container">
-            <div class="footer__logo">
+            <div class="footer__logo footer--item">
                 <img src="./img/footer-logo.png" alt="Footer logo">
             </div>
-            <div class="footer__links">
+            <div class="footer__links footer--item">
                 <a href="#">Россия, Воронеж</a>
                 <a href="#">Россия, Воронеж</a>
             </div>
-            <div class="footer__links">
+            <div class="footer__links footer--item">
                 <a href="tel:+77777737823">+77777737823</a>
                 <a href="mailto:airtime.studio@inbox.ru">airtime.studio@inbox.ru</a>
             </div>
-            <div class="footer__links">
+            <div class="footer__links footer--item">
                 <a href="#">Vkontaket</a>
                 <a href="#">Instagram</a>
             </div>
