--- a/extenciproject.html
+++ b/extenciproject.html
@@ -130,7 +130,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="video-showproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
