--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
                 <div class="hero__subtitle">
                     <p>Киберспорт. Дизайн. Менеджмент</p>
                 </div>
+                <div class="connecting__button hero__content_button">
+                    <a href="form.html" class="connecting__button_link">Оставить Заявку</a>
+                </div>
                 <div class="oil__img oil--one">
                     <img src="./img/oil.png" alt="Картинки капли">
                 </div>
                 <div class="oil__img oil--two">
                     <img src="./img/oil.png" alt="Картинки капли">
                 </div>
+                
                 <div class="slider--scroll-bar">
                     <a href="#link_services_scrollbar">
                         <div class="slider--scroll-bar__content">
@@ -290,7 +294,7 @@
                 </div>
                 <div class="clients__wrapper">
                     <div class="clints__item">
-                        <img src="./img/client-logo1.png" alt="Логотип компании">
+                        <img class="client-no-big-logo" src="./img/bet-boom-logo.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
                         <img src="./img/client-logo2.png" alt="Логотип компании">
@@ -306,6 +310,9 @@
                     </div>
                     <div class="clints__item">
                         <img src="./img/client-logo6.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img class="client-no-big-logo" src="./img/winline-logo.png" alt="Логотип компании">
                     </div>
                 </div>
             </div>
