--- a/betboomproject.html
+++ b/betboomproject.html
@@ -224,7 +224,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="gazpromproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
