--- a/cyberstudentproj.html
+++ b/cyberstudentproj.html
@@ -243,7 +243,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="takeoffproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
