--- a/gazpromproject.html
+++ b/gazpromproject.html
@@ -141,7 +141,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="cyberstudentproj.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
