--- a/shosproject.html
+++ b/shosproject.html
@@ -149,7 +149,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="winlineproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
