--- a/takeoffproject.html
+++ b/takeoffproject.html
@@ -164,7 +164,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="extenciproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
