--- a/winlineproject.html
+++ b/winlineproject.html
@@ -137,7 +137,7 @@
                             Все проекты
                         </a>
                         <span class="rainbow--line"></span>
-                        <a href="form.html" class="project__button right--btn" >
+                        <a href="betboomproject.html" class="project__button right--btn" >
                             Следующий проект
                         </a>
                     </div>
