--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
                     <li class="nav__item">
                         <a href="#" class="nav--link">Контакты</a>
                     </li>
+                    <li class="nav__item-order">
+                        <div class="header__button header__button--mobile">
+                            <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
+                            <span class="header--underline"></span>
+                        </div>
+                    </li>
                 </ul>
             </nav>
-            <div class="header__button">
+            <div class="header__button header__button--desktop">
                 <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
                 <span class="header--underline"></span>
             </div>
@@ -59,7 +65,7 @@
                     <h1>Креативное агентство</h1>
                 </div>
                 <div class="hero__company--name">
-                    <p>AIR TIME STUDIO</p>
+                    <p>AIR TIME <span>STUDIO</span></p>
                 </div>
                 <div class="hero__subtitle">
                     <p>Киберспорт. Дизайн. Менеджмент</p>
@@ -314,6 +320,9 @@
                     <div class="clints__item">
                         <img class="client-no-big-logo" src="./img/winline-logo.png" alt="Логотип компании">
                     </div>
+                    <div class="clints__item">
+                        <img class="client-no-big-logo" src="./img/mkb.png" alt="Логотип компании">
+                    </div>
                 </div>
             </div>
         </section>
@@ -326,39 +335,19 @@
                     <div class="slider-list">
                       <div class="slider-track">
                         <div class="slide">
-                            <p class="slide--text">“Мы рады, что воспользовались
-                                вашими услугами. Весь коллектив был 
-                                очень доволен”
+                            <p class="slide--text">“Я в восторге от работы студии! Ребята настолько увлеклись, что получилось просто потрясающе! Особенно я оценила работу двух комментаторов, которые сделали трансляцию настолько интересной и захватывающей. Огромное спасибо студии за такую прекрасную работу!”
                             </p>
                             <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
                         </div>
                         <div class="slide">
-                            <p class="slide--text">“Мы рады, что воспользовались
-                                вашими услугами. Весь коллектив был 
-                                очень доволен”
+                            <p class="slide--text">“Команда Air Time была приглашена для участия в медийной киберспортивной лиге, где они успешно закрыли блок спортивной организации по двум дисциплинам. Они продемонстрировали высокие профессиональные качества и личностные проявления, что позволило им успешно провести 64 матча в течение 2,5 месяцев. “
                             </p>
-                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                            <p class="slide--sign">Исполнительный продюссер BetBoom Esports Tournament</p>
                         </div>
                         <div class="slide">
-                            <p class="slide--text">“Мы рады, что воспользовались
-                                вашими услугами. Весь коллектив был 
-                                очень доволен”
+                            <p class="slide--text">“Студия AIR TIME провела более 10 онлайн-трансляций финальных игр турнира «Кибер студенты» на высоком уровне. Качество организации было отмечено участниками проекта. Опытные ведущие, комментаторы, красивые худы и оперативное решение задач делают турнир уникальным и качественным. Большое спасибо команде AIR TIME.”
                             </p>
-                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
-                        </div>
-                        <div class="slide">
-                            <p class="slide--text">“Мы рады, что воспользовались
-                                вашими услугами. Весь коллектив был 
-                                очень доволен”
-                            </p>
-                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
-                        </div>
-                        <div class="slide">
-                            <p class="slide--text">“Мы рады, что воспользовались
-                                вашими услугами. Весь коллектив был 
-                                очень доволен”
-                            </p>
-                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                            <p class="slide--sign">Главный организатор турнира “КиберСтуденты”</p>
                         </div>
                       </div>
                     </div>
