--- a/gazpromproject.html
+++ b/gazpromproject.html
@@ -145,6 +145,17 @@
                             Следующий проект
                         </a>
                     </div>
+                    <!--Mobile-->
+                    <div class="btn__row btn__row_mobile">
+                        <a href="projects.html" class="btn__all-proj">
+                            Все проекты
+                        </a>
+                    </div>
+                    <div class="btn__row btn__row_mobile">
+                        <a href="gazpromproject.html" class="btn__all-proj">
+                            Следующий проект
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
