--- a/betboomproject.html
+++ b/betboomproject.html
@@ -37,11 +37,17 @@
                         <a href="projects.html" class="nav--link">Проекты</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Контакты</a>
+                        <a href="#footer" class="nav--link">Контакты</a>
+                    </li>
+                    <li class="nav__item-order">
+                        <div class="header__button header__button--mobile">
+                            <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
+                            <span class="header--underline"></span>
+                        </div>
                     </li>
                 </ul>
             </nav>
-            <div class="header__button">
+            <div class="header__button header__button--desktop">
                 <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
                 <span class="header--underline"></span>
             </div>
@@ -240,25 +246,26 @@
                             Следующий проект
                         </a>
                     </div>
+                    <!--Mobile-->
                 </div>
             </div>
         </section>
     </main>
-    <footer class="container-fluid">
+    <footer class="container-fluid" id="footer">
         <div class="footer__content container">
-            <div class="footer__logo">
+            <div class="footer__logo footer--item">
                 <img src="./img/footer-logo.png" alt="Footer logo">
             </div>
-            <div class="footer__links">
+            <div class="footer__links footer--item">
                 <a href="#">Россия, Воронеж</a>
-                <a href="#">Россия, Воронеж</a>
+                <a href="tel:+79515437843">+7 951 543 78 43</a>
             </div>
-            <div class="footer__links">
-                <a href="tel:+77777737823">+77777737823</a>
+            <div class="footer__links footer--item">
+                <a href="tel:+79191886920">+7 919 188 69 20</a>
                 <a href="mailto:airtime.studio@inbox.ru">airtime.studio@inbox.ru</a>
             </div>
-            <div class="footer__links">
-                <a href="#">Vkontaket</a>
+            <div class="footer__links footer--item">
+                <a href="https://vk.com/airtimestudio">Vkontakte</a>
                 <a href="#">Instagram</a>
             </div>
         </div>
