--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#services" class="nav--link">Услуги</a>
+                        <a href="index.html#services" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
                         <a href="about.html" class="nav--link">О нас</a>
@@ -37,7 +37,7 @@
                         <a href="projects.html" class="nav--link">Проекты</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Контакты</a>
+                        <a href="#footer" class="nav--link">Контакты</a>
                     </li>
                     <li class="nav__item-order">
                         <div class="header__button header__button--mobile">
@@ -62,7 +62,7 @@
         <section class="section__hero container-fluid">
             <div class="hero__content container">
                 <div class="hero__title rainbow--text-hero">
-                    <h1>Креативное агентство</h1>
+                    <h1>Активационное агентство</h1>
                 </div>
                 <div class="hero__company--name">
                     <p>AIR TIME <span>STUDIO</span></p>
@@ -296,7 +296,7 @@
         <section class="our-clients__section container-fluid">
             <div class="our-clients__content container">
                 <div class="our-clients__title main--title">
-                    <h3>Наши клиенты</h3>
+                    <h3>Нам доверяют</h3>
                 </div>
                 <div class="clients__wrapper">
                     <div class="clints__item">
@@ -376,21 +376,21 @@
             </div>
         </section>
     </main>
-    <footer class="container-fluid">
+    <footer class="container-fluid" id="footer">
         <div class="footer__content container">
             <div class="footer__logo footer--item">
                 <img src="./img/footer-logo.png" alt="Footer logo">
             </div>
             <div class="footer__links footer--item">
                 <a href="#">Россия, Воронеж</a>
-                <a href="#">Россия, Воронеж</a>
+                <a href="tel:+79515437843">+7 951 543 78 43</a>
             </div>
             <div class="footer__links footer--item">
-                <a href="tel:+77777737823">+77777737823</a>
+                <a href="tel:+79191886920">+7 919 188 69 20</a>
                 <a href="mailto:airtime.studio@inbox.ru">airtime.studio@inbox.ru</a>
             </div>
             <div class="footer__links footer--item">
-                <a href="#">Vkontaket</a>
+                <a href="https://vk.com/airtimestudio">Vkontakte</a>
                 <a href="#">Instagram</a>
             </div>
         </div>
