--- a/index.html
+++ b/index.html
@@ -303,25 +303,25 @@
                         <img class="client-no-big-logo" src="./img/bet-boom-logo.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img src="./img/client-logo2.png" alt="Логотип компании">
+                        <img class="client-logo" src="./img/client-logo2.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img src="./img/client-logo3.png" alt="Логотип компании">
+                        <img class="client-logo"  src="./img/client-logo3.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img src="./img/client-logo4.png" alt="Логотип компании">
+                        <img class="client-logo" src="./img/client-logo4.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img src="./img/client-logo5.png" alt="Логотип компании">
+                        <img class="client-logo client-logo-sup-small" src="./img/client-logo5.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img src="./img/client-logo6.png" alt="Логотип компании">
+                        <img class="client-logo"  src="./img/client-logo6.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img class="client-no-big-logo" src="./img/winline-logo.png" alt="Логотип компании">
+                        <img  class="client-no-big-logo" src="./img/winline-logo.png" alt="Логотип компании">
                     </div>
                     <div class="clints__item">
-                        <img class="client-no-big-logo" src="./img/mkb.png" alt="Логотип компании">
+                        <img  class="client-no-big-logo" src="./img/mkb.png" alt="Логотип компании">
                     </div>
                 </div>
             </div>
