--- a/about.html
+++ b/about.html
@@ -74,12 +74,19 @@
                                 <p>2 года в киберспорте</p>
                             </div>
                             <div class="team__item--desk">
-                                <p>Стимул осознаёт бихевиоризм. Самонаблюдение мгновенно начинает ролевой страх. Аномия, как справедливо считает Ф.Энгельс, отражает стресс. Связь, в представлении Морено, семантически дает возрастной бихевиоризм, в частности, "тюремные психозы",</p>
+                                <p>
+                                    Мы рады представить вам нашу команду, которая уже 2 года занимается профессиональным киберспортом. Наши корни уходят в студенческие турниры, которые мы организовывали и на которых начинали свой путь в мире киберспорта.
+                                </p>
+                                <br>
+                                <p>
+                                    Сегодня мы можем гордиться тем, что наша команда выросла и стала большой и дружной. Мы продолжаем участвовать в турнирах и соревнованиях, улучшая свои навыки и достигая новых высот.
+Мы верим, что киберспорт - это не просто игра, а настоящий спорт, который требует мастерства, умения работать в команде и стратегического мышления. Мы готовы поделиться своим опытом и знаниями с теми, кто разделяет нашу страсть к киберспорту.
+                                </p>
                             </div>
                         </div>
                         <div class="team__item-2 team--item">
                             <div class="card__img">
-                                <img src="./img/ilya.png" alt="Илья">
+                                <img src="./img/Kostya.webp" alt="Илья">
                             </div>
                             <div class="team__card--title">
                                 <p>Константин</p>
