--- a/index.html
+++ b/index.html
@@ -88,13 +88,12 @@
                             </div>
                         </div>
                     </a>
-                    
                 </div>
             </div>
         </section>
         <section class="section__Services container-fluid" id="services">
             <div class="section__content container" id="link_services_scrollbar">
-                <div class="services__title main--title rainbow--text" >
+                <div class="services__title services__title_normalise main--title rainbow--text" >
                     <h2>Услуги</h2>
                 </div>
                 <div class="services__desk main--desk">
@@ -111,7 +110,7 @@
                                 <h3>Киберспорт.</h3>
                             </div>
                             <div class="text__main-text text--cyber">
-                                <p class="main__text--item">Организация турниров под ключ</p>
+                                <p class="main__text--item">Полный сервис по организации турниров</p>
                                 <p class="main__text--item">Освещение киберспортивных<br>
                                     мероприятий из профессиональной студии</p>
                                 <p class="main__text--item">Судейство и курирование турнира</p>
