--- a/betboomproject.html
+++ b/betboomproject.html
@@ -138,7 +138,7 @@
                             <div class="tasks__col">
                                 <div class="grey--number">07</div>
                                 <div class="tasks__text">
-                                    <p>Создание страницы турнира на Liqupedia</p>
+                                    <p>Создание страницы турнира на  Liquipedia</p>
                                 </div>
                             </div>
                         </div>
