--- a/cyberstudentproj.html
+++ b/cyberstudentproj.html
@@ -86,7 +86,7 @@
                                 <p>Проведение прямых трансляций
                                     по дисциплинам CS:GO , DOTA2 и FIFA22</p>
                                     <br>
-                                <p>Разработка для прототипа сайта регистрации</p>
+                                <p>Разработка макета сайта для регистрации команд</p>
                             </div>
                         </div>
                     </div>
@@ -185,24 +185,24 @@
                             <div class="tasks__col">
                                 <div class="grey--number">04</div>
                                 <div class="tasks__text">
-                                    <p>Проведение трансляции по DOTA2</p>
+                                    <p>Создание индивидуальной графики 
+                                        для трансляции</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- Task Row-->
+                        <!-- Task Row -->
                         <div class="tasks__row">
                             <div class="tasks__col">
                                 <div class="grey--number">05</div>
                                 <div class="tasks__text">
-                                    <p>Создание индивидуальной графики 
-                                        для трансляции</p>
+                                    <p>Создание внутриигровой графики
+                                        (худ)</p>
                                 </div>
                             </div>
                             <div class="tasks__col">
                                 <div class="grey--number">06</div>
                                 <div class="tasks__text">
-                                    <p>Создание внутриигровой графики
-                                        (худ)</p>
+                                    <p>Проведение трансляции по DOTA2</p>
                                 </div>
                             </div>
                         </div>
