--- a/extenciproject.html
+++ b/extenciproject.html
@@ -121,7 +121,7 @@
                         <div class="tasks--done--title">
                             <h2>Дизайн сайта</h2>
                         </div>
-                        <div class="proj_picture_big">
+                        <div class="proj_picture_big extenci--desktop-img">
                             <img src="./img/extenci.png" alt="main img">
                         </div>
                         
