--- a/video-showproject.html
+++ b/video-showproject.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="hero__text">
                             <div class="hero__text-desk">
-                                <p>С нуля была создано шоу о киберспорте, где освещались актуальные новости, как студенческого киберспорта, так и киберспорта большой арены</p>
+                                <p>С нуля было создано шоу о киберспорте, где освещались актуальные новости, как студенческого киберспорта, так и киберспорта большой арены</p>
                             </div>
                             <div class="hero__text-key">
                                 <p>Ключевые задачи </p>
@@ -84,7 +84,7 @@
                                     и подобрать максимально актуальную и 
                                     интересную информация</p>
                                 <br>
-                                <p>Сделать подачу с чувством юмора
+                                <p>Сделать подачу контента с чувством юмора
                                     (съемка скетчей)</p>
                             </div>
                         </div>
