--- a/shosproject.html
+++ b/shosproject.html
@@ -83,7 +83,7 @@
                             <div class="hero__text-words">
                                 <p>Создание айдентики турнира</p>
                                 <br>
-                                <p>Провести трансляцию квалификаций турнира ШОС по дисциплине DOTA2</p>
+                                <p>Провести трансляцию квалификации турнира ШОС по дисциплине DOTA2</p>
                                     <br>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                             <div class="tasks__col">
                                 <div class="grey--number">04</div>
                                 <div class="tasks__text">
-                                    <p>Стилизованная стадия пиков</p>
+                                    <p>Сформирована стилизованная стадия пиков-банов</p>
                                 </div>
                             </div>
                         </div>
