--- a/form.html
+++ b/form.html
@@ -59,8 +59,20 @@
         </div>
     </header>
     <main>
+        <div class="modal-success">
+            <div class="modal-success__wrapper">
+                <div class="modal-success__logo">
+                    <img src="./img/logo.svg" alt="logo">
+                </div>
+                <div class="modal-success__text">
+                    <p>Ваша заявка успешно отправлена,<br>
+                        в ближайшее время мы Вам ответим</p>
+                </div>
+                <button class="modal-success__button">Ок</button>
+            </div>
+        </div>
         <section class="section__form container-fluid">
-           <div class="form__content container">
+            <div class="form__content container">
                 <div class="arrow--to-back">
                     <a class="arrow--back-link" href="index.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
                 </div>
@@ -74,34 +86,34 @@
                             <!-- Поле с именем -->
                             <div class="contact-form__input-wrapper contact-form__input-wrapper_name">
                                 <input name="name" type="text" class="contact-form__input contact-form__input_name"
-                                   placeholder="Ваше имя">
+                                placeholder="Ваше имя">
                             </div>
                             <!-- Поле с Почтой -->
                             <div class="contact-form__input-wrapper contact-form__input-wrapper_email">
                                 <input name="email" type="email" class="contact-form__input contact-form__input_email"
-                                 placeholder="Ваш E-mail">
+                                placeholder="Ваш E-mail">
                             </div>
                             <!-- Поле с телефоном -->
                             <div class="contact-form__input-wrapper contact-form__input-wrapper_phone">
                                 <input name="phone" type="tel" class="contact-form__input contact-form__input_phone"
-                                   placeholder="Телефон">
+                                placeholder="Телефон">
                             </div>
                         </div>
                         <div class="contact__row about--project--form">
                             <p class="contact-form__title">Несколько слов о проекте</p>
                             <input name="message" type="text" class="contact-form__input contact-form__input_message"
-                                   placeholder="Сообщение">
+                                placeholder="Сообщение">
                         </div>                                               
-                                                                                     
+
                         <!--Поле с темой в письме-->
                         <input name="theme" type="hidden" class="contact-form__input contact-form__input_theme"
-                               value="заявка с сайта Air Time Studio">                       
+                            value="заявка с сайта Air Time Studio">                       
                         <!--Кнопка отправки формы-->
                         <button type="submit" class="contact-form__button" onclick="window.location.href='https://'">Отправить</button>
-                       <!-- onclick="window.location.href='http://192.168.0.111/login.html'"-->
-                      </form>
+                        <!-- onclick="window.location.href='http://192.168.0.111/login.html'"-->
+                    </form>
                 </div>
-           </div>
+            </div>
         </section>
     </main>
     <footer class="container-fluid" id="footer">
@@ -124,7 +136,9 @@
         </div>
     </footer>
     <!--script!-->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="./js/header.js"></script>
+    <script src="./js/validate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/telegramform/js/telegramform.js"></script>
 </body>
